[package]
name = "network-audio-input-adapter"
version = "0.1.0"
authors = ["luyi <luyi@newtranx.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"
http = "*"
futures = "*"
cpal = "0.9"
failure = "0.1.5"
hound = "3.4"
log = "0.4"
env_logger = "0.6"
lazy_static = "1.3.0"

[patch.crates-io]
http = { git = "https://github.com/masayoshi-louis/http.git" }

[profile.release]
lto = true
